2006-07-09  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	* configure.in:
	* src/load-graph.c: (load_graph_draw):
	
	Displays scales in graphs. Closes #308416.
	Released 2.15.4.

2006-07-08  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/Makefile.am:
	* src/procdialogs.c: (procdialog_create_root_password_dialog):
	* src/procman_gksu.c: (load_gksu):
	* src/procman_gksu.h:
	* src/procman_gnomesu.c: (load_gnomesu),
	(procman_gnomesu_create_root_password_dialog),
	(procman_has_gnomesu):
	* src/procman_gnomesu.h:
	* src/proctable.c: (create_proctree):
	* src/selinux.c: (load_selinux), (get_process_selinux_context),
	(can_show_security_context_column):
	* src/selinux.h:
	* src/util.c: (load_symbols):
	* src/util.h:
	
	Big rework of {gksu,gnomesu,selinux} dynamic loading.
	Dropped all related auto* stuff.
	Added load_symbols which makes module loading easier.

2006-07-06  Benoît Dejean  <benoit@placenet.org>

	* src/procman.h:
	* src/proctable.c: (create_proctree), (proctable_new),
	(proctable_free_info), (insert_info_to_tree), (procinfo_new):
	* src/proctable.h:
	
	Display escaped arguments in COL_ARGS.
	The sexy tooltip still displays raw arguments.
	Closes #341095.

2006-07-06  Benoît Dejean  <benoit@placenet.org>

	* src/procman.c: (procman_get_tree_state):

	If a column is visible, ensure it really is.

2006-06-29  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.15.0.

2006-06-29  Benoît Dejean  <benoit@placenet.org>

	* src/callbacks.c: (cb_about):
	* src/procman.c: (main):

	Set application name.
	Updated about dialog (http://live.gnome.org/GnomeGoals/AboutDialog).

2006-06-28  Benoît Dejean  <benoit@placenet.org>

	* src/proctable.c: (proctable_new):
	
	Use fixed width only for COL_NAME and COL_ARGS.

2006-06-25  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/procdialogs.c: (procdialog_create_root_password_dialog):
	* src/procman_gksu.c: (load_gksu),
	(procman_gksu_create_root_password_dialog), (procman_has_gksu):