@@ -222,6 +222,37 @@ cb_disk_columns_changed(GtkTreeView *treeview, gpointer user_data)
 				"/apps/procman/disktreenew");
 }
 
+
+static void open_dir(GtkTreeView       *tree_view,
+		     GtkTreePath       *path,
+		     GtkTreeViewColumn *column,
+		     gpointer	       user_data)
+{
+	GtkTreeIter iter;
+	GtkTreeModel *model;
+	char *dir, *url;
+
+	model = gtk_tree_view_get_model(tree_view);
+
+	if (!gtk_tree_model_get_iter(model, &iter, path)) {
+		char *p;
+		p = gtk_tree_path_to_string(path);
+		g_warning("Cannot get iter for path '%s'\n", p);
+		g_free(p);
+		return;
+	}
+
+	gtk_tree_model_get(model, &iter, DISK_DIR, &dir, -1);
+
+	url = g_strdup_printf("file://%s", dir);
+
+	if (gnome_vfs_url_show(url) != GNOME_VFS_OK)
+		g_warning("Cannot open '%s'\n", url);
+
+	g_free(url);
+	g_free(dir);
+}
+
 GtkWidget *
 create_disk_view(ProcData *procdata)
 {
@@ -283,6 +314,7 @@ create_disk_view(ProcData *procdata)
 		);
 
 	disk_tree = gtk_tree_view_new_with_model(GTK_TREE_MODEL(model));
+	g_signal_connect(G_OBJECT(disk_tree), "row-activated", G_CALLBACK(open_dir), NULL);
 	procdata->disk_list = disk_tree;
 	gtk_container_add(GTK_CONTAINER(scrolled), disk_tree);
 	gtk_tree_view_set_rules_hint(GTK_TREE_VIEW(disk_tree), TRUE);
