@@ -1,3 +1,10 @@
+2006-07-10  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/disks.c: (open_dir), (create_disk_view):
+	
+	Double-click on a mountpoint opens it.
+
 2006-07-09  Benoît Dejean  <benoit@placenet.org>
 
 	* NEWS:
